[package]
name = "transaction-machine"
version = "0.1.0"
edition = "2018"

[dependencies]
fnv = "1.0.3"
rocksdb = "0.16.0"
bincode = "1.3.2"
serde = { version = "=1.0.119", features = ["derive", "rc"] }
tempdir = "0.3.7"
thiserror = "1.0"
lru = "0.6.5"
tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.2", features = ["sync"] }
futures = "0.3.4"
futures-util = "0.3.4"
tracing-futures = "0.2.4"
tracing = "0.1.16"
csv = "1.1.6"
serde_json = "1.0.64"
rand = "0.8.3"
